syntax = "proto3";

package model;

import "proto/model/effect.proto";
import "proto/model/enums.proto";
import "proto/model/location.proto";

option go_package = "github.com/user/repo/proto/model";

// Ability 定义角色的特殊技能。
message Ability {
  string id = 1;
  string name = 2;
  string description = 3;
  AbilityTriggerType trigger_type = 4;
  Effect effect = 5;
  bool once_per_loop = 6;
  PlayerRole refusal_role = 7;
  bool used_this_loop = 8;
  LocationType target_location = 9;
}